Updated styles.css and code cleanup

--- a/circle.html
+++ b/circle.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<main class="wrapper">
+<main>
     <form class="inputs-form">
         <div class="left">
             <div class="flex-item">
@@ -38,9 +38,12 @@
             </div>
         </div>
     </form>
+    <div>
+        <button type="button" id="clean-btn" class="form-btn">Clean canvas</button>
+        <button type="button" id="reset-btn" class="form-btn">Reset</button>
+    </div>
     <canvas></canvas>
 </main>
-<script src="index.js" type="module"></script>
 <script src="./js/form.js" type="module"></script>
 </body>
 </html>
