Added second color picker for gradient

--- a/circle.html
+++ b/circle.html
@@ -22,8 +22,8 @@
                 <input type="range" min="0" value="0" max="350" id="radius-size-change">
             </div>
             <div class="flex-item">
-                <label for="color-picker">Color</label>
-                <input type="color" id="color-picker">
+                <label for="base-color">Color</label>
+                <input type="color" id="base-color">
             </div>
         </div>
 
@@ -40,9 +40,9 @@
                 <label for="line-dash">Line dash</label>
                 <input type="text" id="line-dash" placeholder="Valid value: 4-20-1-8...">
             </div>
-            <div class="flex-item">
-                <input type="checkbox" id="second-color-checkbox">
+            <div class="flex-item second-color">
                 <label for="second-color">Second color</label>
+                <input type="checkbox" id="second-color-checkbox">
                 <input type="color" id="second-color" disabled>
             </div>
         </div>
